# quietheart

./: README.md  _config.yml
codes/: readme
misc/mylinux/: .vimrc  readme
mydoc/: card_pit_temp  planStud
mydoc/english/: englishTransStud  someWordsForShort  tmpWord
mydoc/experiment/: time_print.c
mydoc/experiment/testAutoMake/autoHello/: configure.in  main.c
mydoc/experiment/testAutoMake/autoHello/hello_dir/: hello.c
mydoc/files/: .unicode_about.swp  abi_about  dma_hda_sda  drop_caches_in_proc  elf_format  linux2.6_initrd_image_explain  linux_hardware  linux_remote_login_windows  linux_static_dynamic_lib  scratchbox_linux  udev_intro  windows_grub_ubuntu
mydoc/myProblem/: linux_app  vi_problem  vi_problem~
mydoc/studied/: readme
mydoc/studying/: my_program_habit  readme~
mydoc/tmp/: pkg-config_summary  python_site  readme
mydoc/windows/: excel.txt
test/: index.html
test/_layouts/: default.html
test/_posts/: 2014-07-31-hello-github.html
tmpdoc/: mess_skills  mess_stud_record  readme
tmpdoc/LinuxInWin/: problemAndSolve
tmpdoc/english/: Myown  english_problem_solve
tmpdoc/experiment/: fbtest.c
tmpdoc/experiment/anyTest/success/usingAutotools/hello/: configure  configure.in
tmpdoc/experiment/anyTest/success/usingAutotools/hello/autom4te.cache/: traces.1
tmpdoc/experiment/anyTest/success/usingAutotools/hello/iface1/: print1.c  print1.h
tmpdoc/files/: Ubuntu_boot_sequence  atom_about  cpu_messy  dbus_basic  els  firefox_shortcut  linux_time_prog  memory_barrier  minicom_messy  mvc_mode  prelink  readme
tmpdoc/myProblem/: gtk_stud_problem  gtk_stud_problem~  myProblem
tmpdoc/studying/: developer_knowledge  readme
(+4100 files in other folders)
