#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

#This is the version of autoconf(lvkai*)
AC_PREREQ(2.59)

#This is the pagename,and version,and email of bug report.(lvkai*)
#lvkai-
#AC_INIT(FULL-PACKAGE-NAME, VERSION, BUG-REPORT-ADDRESS)

#lvkai+
AC_INIT(hello,1.0)

#lvkai+ This used for automake.
AM_INIT_AUTOMAKE(hello,1.0)

#This check if source file exists,and directory validity.file in current directory.(lvkai*).
AC_CONFIG_SRCDIR([main.c])

#This is used for autoheader(lvkai*).
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

#lvkai+ This is used for generate the Makefile.
AC_CONFIG_FILES([Makefile])

AC_OUTPUT
